# SeisPolarity

./: .gitignore  LICENSE  README.md  pyproject.toml
Tests/: test_data_structure.py
seispolarity/: __init__.py  annotations.py  config.py
seispolarity/data/: __init__.py  aq2009.py  base.py  bohemia.py  ceed.py  crew.py  cwa.py  das_base.py  download.py  dummy.py  ethz.py  geofon.py  instance.py  iquique.py  isc_ehb.py  lendb.py  lfe_stacks.py  neic.py  obs.py  obst2024.py  pisdl.py  pnw.py  scedc.py  stead.py  txed.py  vcseis.py
seispolarity/models/: __init__.py  app.py  base.py  diting_motion.py  eqpolarity.py  scsn.py  seisbench_wrappers.py
seispolarity/util/: __init__.py  file.py  trace_ops.py
tests/: test_models.py
